--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -990,6 +990,191 @@ main {
 
 
 
+/* Часто задаваемые вопросы */
+
+.FAQ {
+    cursor: pointer;
+    width: 100%;
+    text-align: left;
+    border-top: 1px solid #dedede;
+    /* border-top: 1px solid #75baf566; */
+    padding: 2% 2%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.FAQ.active .fa_minus {
+    display: block;
+}
+
+.FAQ.active .fa_plus {
+    display: none;
+}
+
+.FAQ:hover .fa h3 {
+    color: #ca0913;
+    transition: all 0.25s linear;
+}
+
+.FAQ_bottom {
+    border-top: 1px solid #dedede;
+}
+
+.fa {
+    width: 95%;
+    margin-right: 10px;
+}
+
+.fa h3 {
+    margin: 0;
+    font-weight: 600;
+    font-size: clamp(22px, 5vw, 24px) !important;
+    text-shadow: var(--text-shadown-b-h3);
+}
+
+.fa_plus {
+    display: inline-block;
+    position: relative;
+    padding-top: 5px;
+    font-weight: 300;
+}
+
+.fa_minus {
+    display: none;
+    position: relative;
+    padding-bottom: 5px;
+    font-weight: 300;
+}
+
+
+
+
+.questions {
+    max-height: 0px;
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+    padding: 0% 2%;
+}
+
+.questions b {
+    font-weight: 700;
+    max-width: 100%;
+    font-size: clamp(16px, 3vw, 20px);
+}
+
+.questions p {
+    font-weight: 500;
+    max-width: 100%;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.questions img {
+    max-width: 90%;
+    height: auto;
+    margin: 2% 1% 20px 1%;
+}
+
+.questions ul {
+    padding-left: 0;
+}
+
+.questions ul li {
+    position: relative;
+    width: 100%;
+    align-items: center;
+    max-width: 100%;
+    padding-left: 30px;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    font-weight: 500;
+    list-style: none;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.questions ul li::before {
+    content: '•';
+    font-size: 30px;
+    color: #ca0913;
+    filter: drop-shadow(0px 0px 0.9px #000);
+    position: absolute;
+    left: 10px;
+    top: -11px;
+}
+
+.questions ol {
+    counter-reset: item;
+}
+
+.questions ol>li {
+    counter-increment: item;
+    margin-bottom: 15px;
+    padding-left: 30px;
+    position: relative;
+    font-weight: 500;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.questions ol>li:nth-child(-n+9)::before {
+    left: 6px;
+}
+.questions ol>li::before {
+    content: counter(item) "";
+    position: absolute;
+    left: 2px;
+    top: -6px;
+    font-weight: 700;
+    font-size: 20px;
+    color: red;
+    filter: drop-shadow(1.5px 1.5px 0.5px #000);
+}
+
+
+
+.questions ul ol li::before {
+    font-size: 20px;
+    top: -3px;
+}
+
+.questions li b {
+    font-weight: 700;
+    max-width: 100%;
+    font-size: clamp(16px, 3vw, 18px);
+}
+
+.questions li li::before {
+    font-size: 24px;
+    left: 10px;
+    top: -5px;
+}
+
+/* Часто задаваемые вопросы */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 @media (max-width:1024px) {
     .page-header-d-full {
         padding: 5% 0;
@@ -1172,187 +1357,6 @@ main {
 
 
 
-
-
-
-/* Часто задаваемые вопросы */
-
-.FAQ {
-    cursor: pointer;
-    width: 100%;
-    text-align: left;
-    border-top: 1px solid #dedede;
-    /* border-top: 1px solid #75baf566; */
-    padding: 2% 2%;
-    display: flex;
-    justify-content: space-between;
-}
-
-.FAQ.active .fa_minus {
-    display: block;
-}
-
-.FAQ.active .fa_plus {
-    display: none;
-}
-
-.FAQ:hover .fa h3 {
-    color: #ca0913;
-    transition: all 0.25s linear;
-}
-
-.FAQ_bottom {
-    border-top: 1px solid #dedede;
-}
-
-.fa {
-    width: 95%;
-    margin-right: 10px;
-}
-
-.fa h3 {
-    margin: 0;
-    font-weight: 600;
-    font-size: clamp(22px, 5vw, 24px) !important;
-    text-shadow: var(--text-shadown-b-h3);
-}
-
-.fa_plus {
-    display: inline-block;
-    position: relative;
-    padding-top: 5px;
-    font-weight: 300;
-}
-
-.fa_minus {
-    display: none;
-    position: relative;
-    padding-bottom: 5px;
-    font-weight: 300;
-}
-
-
-
-
-
-
-.questions {
-    max-height: 0px;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    padding: 0% 2%;
-}
-
-.questions b {
-    font-weight: 700;
-    max-width: 100%;
-    font-size: clamp(16px, 3vw, 20px);
-}
-
-.questions p {
-    font-weight: 500;
-    max-width: 100%;
-    font-size: clamp(16px, 3vw, 18px);
-}
-
-.questions img {
-    max-width: 90%;
-    height: auto;
-    margin: 2% 1% 20px 1%;
-}
-
-.questions ul {
-    padding-left: 0;
-}
-
-.questions ul li {
-    position: relative;
-    width: 100%;
-    align-items: center;
-    max-width: 100%;
-    padding-left: 30px;
-    margin-bottom: 15px;
-    margin-top: 5px;
-    font-weight: 500;
-    list-style: none;
-    font-size: clamp(16px, 3vw, 18px);
-}
-
-.questions ul li::before {
-    content: '•';
-    font-size: 30px;
-    color: #ca0913;
-    filter: drop-shadow(0px 0px 0.9px #000);
-    position: absolute;
-    left: 10px;
-    top: -11px;
-}
-
-.questions ol {
-    counter-reset: item;
-}
-
-.questions ol>li {
-    counter-increment: item;
-    margin-bottom: 15px;
-    padding-left: 30px;
-    position: relative;
-    font-weight: 500;
-    font-size: clamp(16px, 3vw, 18px);
-}
-
-.questions ol>li::before {
-    content: counter(item) "";
-    position: absolute;
-    left: 10px;
-    top: -3px;
-    font-weight: 700;
-    font-size: 20px;
-    color: red;
-    filter: drop-shadow(1.5px 1.5px 0.5px #000);
-}
-
-.questions ul ol li::before {
-    font-size: 20px;
-    top: -3px;
-}
-
-.questions li b {
-    font-weight: 700;
-    max-width: 100%;
-    font-size: clamp(16px, 3vw, 18px);
-}
-
-.questions li li::before {
-    font-size: 24px;
-    left: 10px;
-    top: -5px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* Часто задаваемые вопросы */
 
 
 
