--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -592,29 +592,33 @@ main {
 
 .content__page-full-logo-brand {
     display: grid;
+    grid-template-columns: 1.5fr 0.5fr;
+    grid-template-rows: 1fr;
+}
+
+.ph-logo-brand {
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 2em;
-    padding: 15px 5px 10px 5px;
-    margin: 0 auto;
+    padding: 10px 5px 10px 5px;
+    /* margin: 0 auto; */
     max-width: 740px;
+    justify-self: left;
 }
 
 .logo-brand {
-    max-width: 200px;
+    max-width: 160px;
     width: 100%;
     height: 100%;
     justify-self: center;
     align-self: center;
     padding: 10px;
     display: grid;
-    /* border: solid 3px #ca0913; */
     border-radius: 50%;
-    /* box-shadow: 0px 0px 12px 4px rgba(135, 135, 135, 0.2); */
-    box-shadow: 0px 0px 13px 1px rgb(135 135 135 / 11%);
+    box-shadow: 0px 0px 11px 3px #87878738;
+    /* box-shadow: 0px 0px 13px 1px rgb(135 135 135 / 11%); */
 }
-
-
 
 .logo-brand img {
     max-width: 100%;
@@ -622,8 +626,22 @@ main {
     align-self: center;
 }
 
+.desc-logo-brand {
+    width: 100%;
+    padding: 5px 5px;
+    justify-self: center;
+    align-self: center;
+}
 
+.desc-logo-brand h3 {
+    font-weight: 500;
+    text-shadow: var(--text-shadown-b-h3);
+    font-size: clamp(18px, 4vw, 22px) !important;
+}
 
+.desc-logo-brand a {
+    color: #000;
+}
 
 
 
@@ -1122,6 +1140,7 @@ main {
 .questions ol>li:nth-child(-n+9)::before {
     left: 6px;
 }
+
 .questions ol>li::before {
     content: counter(item) "";
     position: absolute;
@@ -1166,7 +1185,7 @@ main {
         top: -7px;
     }
 
-    
+
 
 
 }
@@ -1219,7 +1238,22 @@ main {
         margin: 5px 10px 15px 10px;
     }
 
-    #left-menu-1::before, #left-menu-2::before, #left-menu-3::before, #left-menu-4::before, #left-menu-5::before, #left-menu-6::before, #left-menu-7::before, #left-menu-8::before, #left-menu-9::before, #left-menu-10::before, #left-menu-11::before, #left-menu-12::before, #left-menu-13::before, #left-menu-14::before, #left-menu-15::before, #left-menu-16::before {
+    #left-menu-1::before,
+    #left-menu-2::before,
+    #left-menu-3::before,
+    #left-menu-4::before,
+    #left-menu-5::before,
+    #left-menu-6::before,
+    #left-menu-7::before,
+    #left-menu-8::before,
+    #left-menu-9::before,
+    #left-menu-10::before,
+    #left-menu-11::before,
+    #left-menu-12::before,
+    #left-menu-13::before,
+    #left-menu-14::before,
+    #left-menu-15::before,
+    #left-menu-16::before {
         height: 95px;
         margin-top: -95px;
     }
@@ -1345,8 +1379,3 @@ main {
     }
 
 }
-
-
-
-
-
