--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -834,6 +834,7 @@ import "css/service/style_services.css";
               </div>
 
               <div class="desc-logo-brand">
+                <p>Brands of microwaves we repair</p>
                 <h3><a href="#">Panasonic</a></h3>
                 <h3><a href="#">Thermador</a></h3>
                 <h3><a href="#">GE Appliances</a></h3>
@@ -844,7 +845,6 @@ import "css/service/style_services.css";
                 <h3><a href="#">Sharp</a></h3>
                 <h3><a href="#">Toshiba</a></h3></h3>
                 <h3><a href="#">Frigidaire</a></h3>
-
               </div>
 
             </div>
