--- a/src/css/service/style_services.css
+++ b/src/css/service/style_services.css
@@ -603,7 +603,7 @@ main {
     grid-gap: 2em;
     padding: 10px 5px 10px 5px;
     /* margin: 0 auto; */
-    max-width: 740px;
+    /* max-width: 740px; */
     justify-self: left;
 }
 
@@ -616,14 +616,27 @@ main {
     padding: 10px;
     display: grid;
     border-radius: 50%;
+    cursor: pointer;
     box-shadow: 0px 0px 11px 3px #87878738;
     /* box-shadow: 0px 0px 13px 1px rgb(135 135 135 / 11%); */
+    transition: all 0.3s ease-out;
 }
+
+.logo-brand:hover {
+    box-shadow: 0px 0px 17px 6px #87878738;
+}
+
 
 .logo-brand img {
     max-width: 100%;
     justify-self: center;
     align-self: center;
+    transform: scale(1, 1);
+    transition: all 0.3s ease-out;
+}
+
+.logo-brand:hover img {
+    transform: scale(1.1, 1.1);
 }
 
 .desc-logo-brand {
@@ -631,16 +644,43 @@ main {
     padding: 5px 5px;
     justify-self: center;
     align-self: center;
+    position: relative;
+}
+
+.desc-logo-brand p {
+    text-align: center;
+    font-size: clamp(18px, 4vw, 22px);
+    font-weight: 700;
+    text-shadow: var(--text-shadown-b-h3);
 }
 
 .desc-logo-brand h3 {
     font-weight: 500;
     text-shadow: var(--text-shadown-b-h3);
-    font-size: clamp(18px, 4vw, 22px) !important;
+    font-size: clamp(16px, 4vw, 20px) !important;
+    position: relative;
+    margin-bottom: 3px;
 }
 
 .desc-logo-brand a {
     color: #000;
+    position: relative;
+}
+  
+.desc-logo-brand a::before {
+    background-color: #ca0913;
+    display: block;
+    content: '';
+    bottom: 0;
+    height: 2px;
+    width: 10%;
+    position: absolute;
+    margin-top: 29px;
+    transition: 0.4s ease-out;
+}
+
+.logo-brand:hover.desc-logo-brand a::before{
+    width: 100%;
 }
 
 
