--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -845,6 +845,7 @@ import "css/service/style_services.css";
                 <h3><a href="#">Sharp</a></h3>
                 <h3><a href="#">Toshiba</a></h3></h3>
                 <h3><a href="#">Frigidaire</a></h3>
+                <h3><a href="#">Сove</a></h3>
               </div>
 
             </div>
