--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -672,11 +672,12 @@ import "css/service/style_services.css";
                   labor. More complex repairs, such as fixing the magnetron or
                   addressing control panel issues, can escalate to <b
                     >$150 to $300</b
-                  > or more. GE microwaves are generally well-regarded for their
-                  durability, but the cost of OEM (original equipment manufacturer)
-                  parts can add to the repair bill. It's often advisable to consult
-                  a certified GE technician to ensure the repairs are done correctly,
-                  which can also influence the overall cost.
+                  >
+                  or more. GE microwaves are generally well-regarded for their durability,
+                  but the cost of OEM (original equipment manufacturer) parts can
+                  add to the repair bill. It's often advisable to consult a certified
+                  GE technician to ensure the repairs are done correctly, which can
+                  also influence the overall cost.
                 </p>
               </div>
 
@@ -688,8 +689,8 @@ import "css/service/style_services.css";
                   costs. Basic repairs, such as replacing a door handle or
                   turntable plate, can typically range from <b>$60 to $120</b>.
                   However, more involved repairs, like fixing a malfunctioning
-                  magnetron or control board, can cost between<b>
-                    $200 and $350</b
+                  magnetron or control board, can cost between <b
+                    >$200 and $350</b
                   >. Samsung's advanced technology often requires specialized
                   parts and skilled technicians, which can drive up the overall
                   repair costs. Additionally, the availability of Samsung parts
@@ -706,14 +707,13 @@ import "css/service/style_services.css";
                   the model and the issue at hand. Simple repairs, such as
                   replacing a turntable motor or a door switch, typically cost
                   between <b>$50 and $110</b>. More complex repairs, such as
-                  fixing the inverter or replacing the magnetron, can range from <b
-                    >$180 to $320</b
-                  >. Panasonic often uses proprietary technology in their
-                  microwaves, which can make parts more expensive and repairs
-                  more specialized. It's usually best to have repairs handled by
-                  authorized Panasonic service centers to ensure the use of
-                  genuine parts and expertise, which can affect the overall
-                  repair cost.
+                  fixing the inverter or replacing the magnetron, can range from
+                  <b>$180 to $320</b>. Panasonic often uses proprietary
+                  technology in their microwaves, which can make parts more
+                  expensive and repairs more specialized. It's usually best to
+                  have repairs handled by authorized Panasonic service centers
+                  to ensure the use of genuine parts and expertise, which can
+                  affect the overall repair cost.
                 </p>
               </div>
 
@@ -723,7 +723,7 @@ import "css/service/style_services.css";
                   LG microwaves are known for their modern features and
                   reliability, but repair costs can vary significantly based on
                   the issue. Basic repairs, like replacing a light bulb or door
-                  switch, usually range from<b> $55 to $100</b>. More extensive
+                  switch, usually range from <b>$55 to $100</b>. More extensive
                   repairs, such as addressing issues with the magnetron or
                   control panel, can cost between <b>$190 and $340</b>. LG
                   microwaves often feature advanced electronics and unique
@@ -777,26 +777,10 @@ import "css/service/style_services.css";
             </div>
 
             <div class="content__page-full-logo-brand">
+
               <div class="ph-logo-brand">
-                <div class="logo-brand">
-                  <img
-                    width="230px"
-                    height="300px"
-                    src="/brand-logos/GE-general-electric.webp"
-                    alt="GE general  electric"
-                  />
-                </div>
 
-                <div class="logo-brand">
-                  <img
-                    width="370px"
-                    height="300px"
-                    src="/brand-logos/samsung.webp"
-                    alt="samsung"
-                  />
-                </div>
-
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-1">
                   <img
                     width="300px"
                     height="300px"
@@ -805,12 +789,39 @@ import "css/service/style_services.css";
                   />
                 </div>
 
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-2">
+                  <img
+                    width="370px"
+                    height="300px"
+                    src="/brand-logos/samsung.webp"
+                    alt="samsung"
+                  />
+                </div>
+
+                <div class="logo-brand logo-bran-ph-3">
+                  <img
+                    width="230px"
+                    height="300px"
+                    src="/brand-logos/GE-general-electric.webp"
+                    alt="GE general electric"
+                  />
+                </div>
+                
+                <div class="logo-brand logo-bran-ph-4">
                   <img
                     width="240px"
                     height="300px"
                     src="/brand-logos/lg.webp"
                     alt="LG"
+                  />
+                </div>
+
+                <div class="logo-brand logo-bran-ph-5">
+                  <img
+                    width="290px"
+                    height="300px"
+                    src="/brand-logos/sharp.webp"
+                    alt="Sharp"
                   />
                 </div>
 
@@ -822,6 +833,15 @@ import "css/service/style_services.css";
                     alt="Whirlpool"
                   />
                 </div>
+                
+                <div class="logo-brand">
+                  <img
+                    width="290px"
+                    height="300px"
+                    src="/brand-logos/sharp.webp"
+                    alt="Sharp"
+                  />
+                </div>
 
                 <div class="logo-brand">
                   <img
@@ -831,23 +851,72 @@ import "css/service/style_services.css";
                     alt="Sharp"
                   />
                 </div>
+
+                <div class="logo-brand">
+                  <img
+                    width="290px"
+                    height="300px"
+                    src="/brand-logos/sharp.webp"
+                    alt="Sharp"
+                  />
+                </div>
+
+                <div class="logo-brand">
+                  <img
+                    width="290px"
+                    height="300px"
+                    src="/brand-logos/sharp.webp"
+                    alt="Sharp"
+                  />
+                </div>
+
+                <div class="logo-brand">
+                  <img
+                    width="290px"
+                    height="300px"
+                    src="/brand-logos/sharp.webp"
+                    alt="Sharp"
+                  />
+                </div>
+
               </div>
 
               <div class="desc-logo-brand">
                 <p>Brands of microwaves we repair</p>
-                <h3><a href="#">Panasonic</a></h3>
-                <h3><a href="#">Thermador</a></h3>
-                <h3><a href="#">GE Appliances</a></h3>
-                <h3><a href="#">Samsung</a></h3>
-                <h3><a href="#">LG Electronics</a></h3>
-                <h3><a href="#">KitchenAid</a></h3>
-                <h3><a href="#">Breville</a></h3>
-                <h3><a href="#">Sharp</a></h3>
-                <h3><a href="#">Toshiba</a></h3></h3>
+                <div class="desc-logo-brand logo-bran-d-1">
+                  <h3><a href="#">Panasonic</a></h3>
+                </div>
+                <div class="desc-logo-brand logo-bran-d-2">
+                  <h3><a href="#">Samsung</a></h3>
+                </div>
+                <div class="desc-logo-brand logo-bran-d-3">
+                 <h3><a href="#">GE Appliances</a></h3>
+               </div>
+               <div class="desc-logo-brand logo-bran-d-4">
+                 <h3><a href="#">LG Electronics</a></h3>
+               </div>
+               <div class="desc-logo-brand logo-bran-d-5">
+                 <h3><a href="#">Sharp</a></h3>
+               </div>
+               <div class="desc-logo-brand logo-bran-d-6">
+                 <h3><a href="#">KitchenAid</a></h3>
+               </div>
+               <div class="desc-logo-brand logo-bran-d-7">
+                 <h3><a href="#">Breville</a></h3>
+               </div>
+               <div class="desc-logo-brand logo-bran-d-8">
+                 <h3><a href="#">Thermador</a></h3>
+               </div>
+               <div class="desc-logo-brand logo-bran-d-9">
+                <h3><a href="#">Toshiba</a></h3>
+              </div>
+              <div class="desc-logo-brand logo-bran-d-10">
                 <h3><a href="#">Frigidaire</a></h3>
+              </div>
+              <div class="desc-logo-brand logo-bran-d-11">
                 <h3><a href="#">Сove</a></h3>
               </div>
-
+              </div>
             </div>
             <Btn />
           </div>
@@ -943,7 +1012,6 @@ import "css/service/style_services.css";
               <div class="content__page-hed-h">
                 <h2>Microwave Repair Cost - Labor Only Excluding Parts</h2>
               </div>
-              <div class="content__page-hed-desc"></div>
             </div>
 
             <div class="content__page-full-desc">
@@ -1016,9 +1084,9 @@ import "css/service/style_services.css";
                     <div class="money_job-prices"><p>$80 - $100</p></div>
                   </div>
                 </div>
-                <Btn />
               </div>
             </div>
+            <Btn />
           </div>
 
           <div class="page213-content" id="left-menu-9">
@@ -2347,7 +2415,95 @@ import "css/service/style_services.css";
     </main>
     <Cta />
   </Container>
+
+  <Arrow />
+  <Focus />
+  <Faqs />
 </Layout>
-<Arrow />
-<Focus />
-<Faqs />
+
+<!-- 1 -->
+<!-- <script>
+  const logoBranPh1 = document.querySelector('.logo-bran-ph-1');
+  const logoBranD1Link = document.querySelector('.logo-bran-d-1 a');
+
+  logoBranPh1.addEventListener('mouseover', function() {
+      logoBranD1Link.classList.add('hovered');
+      logoBranPh1.classList.add('hovered');
+  });
+
+  logoBranPh1.addEventListener('mouseout', function() {
+      logoBranD1Link.classList.remove('hovered');
+      logoBranPh1.classList.remove('hovered');
+  });
+
+  const logoBranD1 = document.querySelector('.logo-bran-d-1');
+
+  logoBranD1.addEventListener('mouseover', function() {
+      logoBranPh1.querySelector('img').classList.add('hovered');
+      logoBranPh1.classList.add('hovered');
+  });
+
+  logoBranD1.addEventListener('mouseout', function() {
+      logoBranPh1.querySelector('img').classList.remove('hovered');
+      logoBranPh1.classList.remove('hovered');
+  });
+</script> -->
+
+<!-- 2 -->
+<!-- <script>
+  const logoBranPh1 = document.querySelector('.logo-bran-ph-2');
+  const logoBranD1Link = document.querySelector('.logo-bran-d-2 a');
+
+  logoBranPh1.addEventListener('mouseover', function() {
+      logoBranD1Link.classList.add('hovered');
+      logoBranPh1.classList.add('hovered');
+  });
+
+  logoBranPh1.addEventListener('mouseout', function() {
+      logoBranD1Link.classList.remove('hovered');
+      logoBranPh1.classList.remove('hovered');
+  });
+
+  const logoBranD1 = document.querySelector('.logo-bran-d-2');
+
+  logoBranD1.addEventListener('mouseover', function() {
+      logoBranPh1.querySelector('img').classList.add('hovered');
+      logoBranPh1.classList.add('hovered');
+  });
+
+  logoBranD1.addEventListener('mouseout', function() {
+      logoBranPh1.querySelector('img').classList.remove('hovered');
+      logoBranPh1.classList.remove('hovered');
+  });
+</script> -->
+
+
+<!-- общий -->
+<script>
+  for (let i = 1; i <= 11; i++) {
+      const logoBranPh = document.querySelector(`.logo-bran-ph-${i}`);
+      const logoBranDLink = document.querySelector(`.logo-bran-d-${i} a`);
+
+      logoBranPh.addEventListener('mouseover', function() {
+          logoBranDLink.classList.add('hovered');
+          logoBranPh.classList.add('hovered');
+      });
+
+      logoBranPh.addEventListener('mouseout', function() {
+          logoBranDLink.classList.remove('hovered');
+          logoBranPh.classList.remove('hovered');
+      });
+
+      const logoBranD = document.querySelector(`.logo-bran-d-${i}`);
+
+      logoBranD.addEventListener('mouseover', function() {
+          logoBranPh.querySelector('img').classList.add('hovered');
+          logoBranPh.classList.add('hovered');
+      });
+
+      logoBranD.addEventListener('mouseout', function() {
+          logoBranPh.querySelector('img').classList.remove('hovered');
+          logoBranPh.classList.remove('hovered');
+      });
+  }
+</script>
