--- a/src/pages/services/microwave-repair.astro
+++ b/src/pages/services/microwave-repair.astro
@@ -825,7 +825,7 @@ import "css/service/style_services.css";
                   />
                 </div>
 
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-6">
                   <img
                     width="300px"
                     height="300px"
@@ -834,47 +834,56 @@ import "css/service/style_services.css";
                   />
                 </div>
                 
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-7">
                   <img
                     width="290px"
                     height="300px"
-                    src="/brand-logos/sharp.webp"
+                    src="/brand-logos/breville.webp"
                     alt="Sharp"
                   />
                 </div>
 
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-8">
                   <img
                     width="290px"
                     height="300px"
-                    src="/brand-logos/sharp.webp"
+                    src="/brand-logos/thermador.webp"
                     alt="Sharp"
                   />
                 </div>
 
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-9">
                   <img
                     width="290px"
                     height="300px"
-                    src="/brand-logos/sharp.webp"
+                    src="/brand-logos/toshiba.webp"
                     alt="Sharp"
                   />
                 </div>
 
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-10">
                   <img
                     width="290px"
                     height="300px"
-                    src="/brand-logos/sharp.webp"
+                    src="/brand-logos/frigidaire.webp"
                     alt="Sharp"
                   />
                 </div>
 
-                <div class="logo-brand">
+                <div class="logo-brand logo-bran-ph-11">
                   <img
                     width="290px"
                     height="300px"
-                    src="/brand-logos/sharp.webp"
+                    src="/brand-logos/cove.webp"
+                    alt="Sharp"
+                  />
+                </div>
+
+                <div class="logo-brand logo-bran-ph-12">
+                  <img
+                    width="290px"
+                    height="300px"
+                    src="/brand-logos/kitchenAid.webp"
                     alt="Sharp"
                   />
                 </div>
@@ -899,7 +908,7 @@ import "css/service/style_services.css";
                  <h3><a href="#">Sharp</a></h3>
                </div>
                <div class="desc-logo-brand logo-bran-d-6">
-                 <h3><a href="#">KitchenAid</a></h3>
+                 <h3><a href="#">Whirlpool</a></h3>
                </div>
                <div class="desc-logo-brand logo-bran-d-7">
                  <h3><a href="#">Breville</a></h3>
@@ -915,6 +924,9 @@ import "css/service/style_services.css";
               </div>
               <div class="desc-logo-brand logo-bran-d-11">
                 <h3><a href="#">Сove</a></h3>
+              </div>
+              <div class="desc-logo-brand logo-bran-d-12">
+                <h3><a href="#">KitchenAid</a></h3>
               </div>
               </div>
             </div>
@@ -2480,7 +2492,7 @@ import "css/service/style_services.css";
 
 <!-- общий -->
 <script>
-  for (let i = 1; i <= 11; i++) {
+  for (let i = 1; i <= 20; i++) {
       const logoBranPh = document.querySelector(`.logo-bran-ph-${i}`);
       const logoBranDLink = document.querySelector(`.logo-bran-d-${i} a`);
 
